# hello-autotools

./: .gitignore  .travis.yml  Makefile.am  README.md  TODO.md  autogen.sh  configure.ac
src/: Makefile.am  main.c
